# Earthrise

./: .env.example  .gitignore  CMakeLists.txt  CMakePresets.json  Dockerfile.server  Earthrise.sln.DotSettings  Earthrise.slnx  Folder.DotSettings  MMO.md  README.md  Universe.md  docker-compose.yml  planet.md  sim.md  vcpkg.json
.github/: agents.md  coding-standards.md  copilot-instructions.md
.github/agents/: Planner.agent.md  RefactorCleaner.agent.md  SoftwareEngineer.agent.md
.github/workflows/: build-deploy.yml
Art/: Conv.cmd
EarthRiseServer/: AuthSystem.cpp  AuthSystem.h  CMakeLists.txt  Database.h  EarthRiseServer.vcxproj  EarthRiseServer.vcxproj.filters  HealthCheck.cpp  HealthCheck.h  ServerConfig.cpp  ServerConfig.h  ServerLoop.cpp  ServerLoop.h  SqlDatabase.cpp  SqlDatabase.h  StateBroadcaster.cpp  StateBroadcaster.h  Telemetry.cpp  Telemetry.h  WinMain.cpp  Zone.cpp  Zone.h  ZoneLoader.cpp  ZoneLoader.h
EarthRiseTests/: AudioEffectsTests.cpp  CMakeLists.txt  ClientSyncTests.cpp  EarthRiseTests.vcxproj  EntityHandleTests.cpp  EntityPoolTests.cpp  GameplayTests.cpp  NetworkingTests.cpp  RenderMathTests.cpp  SerializationTests.cpp  ServerInfraTests.cpp  SimulationTests.cpp  SpaceObjectManagerTests.cpp  TestStubs.cpp  UITests.cpp  UniverseTests.cpp  pch.h
Earthrise/: AudioEventHandler.cpp  AudioEventHandler.h  CMakeLists.txt  ChatUI.cpp  ChatUI.h  ClientWorldState.cpp  ClientWorldState.h  CommandTargeting.cpp  CommandTargeting.h  Earthrise.rc  Earthrise.vcxproj  Earthrise.vcxproj.filters  FleetPanel.cpp  FleetPanel.h  FleetSelectionUI.cpp  FleetSelectionUI.h  GameApp.cpp  GameApp.h  HUD.cpp  HUD.h  InputHandler.cpp  InputHandler.h  InputState.cpp  InputState.h  Interpolation.h  JumpgateUI.cpp  JumpgateUI.h  Package.appxmanifest  Prediction.cpp  Prediction.h  ServerConnection.cpp  ServerConnection.h  SoundBank.cpp  SoundBank.h  SpatialAudioSystem.cpp  SpatialAudioSystem.h  TargetingUI.cpp  TargetingUI.h  WinMain.cpp  app.manifest
Earthrise/Assets/Mesh/Asteroids/: Asteroid02.cmo  Asteroid03.cmo  Asteroid05.cmo
Earthrise/Assets/Mesh/Crates/: CrateAlien01.cmo
Earthrise/Assets/Mesh/Decorations/: BrokenAsteroid01.cmo  Satellite01.cmo
Earthrise/Assets/Mesh/Hulls/: HullAvalancheMk2.cmo  HullBanshee.cmo  HullBoomerang.cmo  HullCrab.cmo  HullPestRed.cmo  HullShuttle.cmo  HullTurretPlatform.cmo
Earthrise/Assets/Mesh/Projectiles/: AlienSeeker.cmo  MissileHeavy.cmo  RocketHeavy.cmo
Earthrise/Assets/Mesh/SpaceObjects/: DebrisGenericBarrel01.cmo  DebrisGenericSolarpanel01.cmo  Mine01.cmo  PlatformRefuel.cmo  XengatarnDevice01.cmo
Earthrise/Assets/Mesh/Stations/: Business01.cmo  Mining01.cmo
Earthrise/Assets/Mesh/Turrets/: AlienTurret01.cmo  BallisticTurret01.cmo  EnergyTurret01.cmo  MissileTurret01.cmo
GameData/Terrain/: LandscapeContainment.dds  LandscapeDefault.dds  LandscapeDesert.dds  LandscapeEarth.dds  LandscapeIcecaps.dds  LandscapeLaunchpad.dds  (+1 more)
GameLogic/: CMakeLists.txt  CollisionSystem.cpp  CollisionSystem.h  CombatSystem.cpp  CombatSystem.h  CommandProcessor.cpp  CommandProcessor.h  DockingSystem.cpp  DockingSystem.h  EntityPool.cpp  EntityPool.h  FleetSystem.cpp  FleetSystem.h  GameLogic.h  GameLogic.vcxproj  InputCommand.h  JumpgateSystem.cpp  JumpgateSystem.h  LootSystem.cpp  LootSystem.h  MiningSystem.cpp  MiningSystem.h  MovementSystem.cpp  MovementSystem.h  NpcAI.cpp  NpcAI.h  ObjectDefsLoader.cpp  ObjectDefsLoader.h  ProjectileSystem.cpp  ProjectileSystem.h  RegrowthSystem.cpp  RegrowthSystem.h  SpaceObjectManager.cpp  SpaceObjectManager.h  SpatialHash.cpp  SpatialHash.h  UniverseGenerator.cpp  UniverseGenerator.h  UniversePersistence.cpp  UniversePersistence.h  (+1 more)
GameRender/: BitmapFont.cpp  BitmapFont.h  CMakeLists.txt  Camera.cpp  Camera.h  CategoryRenderers.h  CmoLoader.cpp  CmoLoader.h  ConstantBufferAllocator.h  DdsLoader.cpp  DdsLoader.h  FlatColorPipeline.cpp  FlatColorPipeline.h  GameRender.h  GameRender.vcxproj  GpuResourceManager.cpp  GpuResourceManager.h  LandscapeTexture.cpp  LandscapeTexture.h  Mesh.cpp  Mesh.h  MeshCache.cpp  MeshCache.h  ParticleRenderer.cpp  ParticleRenderer.h  ParticleSystem.cpp  ParticleSystem.h  PipelineHelpers.cpp  PipelineHelpers.h  PostProcess.cpp  PostProcess.h  ShaderVisibleHeap.cpp  ShaderVisibleHeap.h  SpaceObjectRenderer.cpp  SpaceObjectRenderer.h  SpriteBatch.cpp  SpriteBatch.h  Starfield.cpp  Starfield.h  SunBillboard.cpp  (+11 more)
GameRender/Shaders/: BillboardPS.hlsl  BillboardVS.hlsl  BloomAdditivePS.hlsl  BloomBlurPS.hlsl  BloomCompositePS.hlsl  BloomExtractPS.hlsl  FlatColorPS.hlsl  FlatColorVS.hlsl  FontPS.hlsl  FontVS.hlsl  FullscreenVS.hlsl  GridPS.hlsl  GridVS.hlsl  ParticlePS.hlsl  ParticleVS.hlsl  SpritePS.hlsl  SpriteVS.hlsl  StarfieldPS.hlsl  StarfieldVS.hlsl  VertexColorPS.hlsl  VertexColorVS.hlsl
NeuronClient/: CMakeLists.txt  DescriptorHeap.cpp  DescriptorHeap.h  DirectXHelper.h  GameMain.h  GraphicsCore.cpp  GraphicsCore.h  NeuronClient.cpp  NeuronClient.h  NeuronClient.vcxproj  NeuronClient.vcxproj.filters  PixProfiler.h  packages.config
NeuronClient/Graphics/: DescriptorHeap.h  GraphicsCore.cpp  PixProfiler.h
NeuronCore/: ASyncLoader.h  CMakeLists.txt  DataReader.h  DataWriter.h  Debug.h  EventManager.h  FileSys.cpp  FileSys.h  GameEvents.h  Messages.h  NetLib.h  NeuronCore.h  NeuronCore.vcxproj  NeuronCore.vcxproj.filters  NeuronCoreBase.h  NeuronHelper.h  NeuronRandom.h  Packet.h  ReliableChannel.cpp  ReliableChannel.h  SerializationBase.h  TasksCore.h  TimerCore.h  UdpSocket.cpp  UdpSocket.h
NeuronCore/GameMath/: GameMath.h  MathCommon.h
NeuronCore/GameTypes/: AsteroidCluster.h  AsteroidData.h  CrateData.h  DecorationData.h  EntityHandle.h  Fleet.h  JumpgateData.h  ObjectDefs.h  PlanetData.h  ProjectileData.h  ShipData.h  ShipLoadout.h  SpaceObject.h  SpaceObjectCategory.h  StationData.h  SunData.h  SurfaceType.h  TurretData.h
NeuronServer/: BandwidthManager.cpp  BandwidthManager.h  CMakeLists.txt  ClientSession.cpp  ClientSession.h  NeuronServer.h  NeuronServer.vcxproj  NeuronServer.vcxproj.filters  SessionManager.cpp  SessionManager.h
cmake/: CompileShaders.cmake
(+63 files in other folders)
